fix(autocomplete item): Fixed wrong padding

--- a/src/common-ui/autocomplete/autocomplete-item/autocomplete-item.component.scss
+++ b/src/common-ui/autocomplete/autocomplete-item/autocomplete-item.component.scss
@@ -26,6 +26,6 @@
     background-color: $red;
     color: white;
     margin-left: -20px;
-    padding-left: 40px;
+    padding-left: 32px;
   }
 }
